# AdapterPattern

./: CMakeLists.txt  main.cpp
GasTank/: GasTank.cpp  GasTank.h
TankAdaptee/: TankAdaptee.cpp  TankAdaptee.h
TankAdapter/: TankAdapter.cpp  TankAdapter.h
solutions/: Task_1137.ipynb  Task_136.ipynb  Task_53.ipynb  Task_849.ipynb
